--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       TON_API_GET_METHODS_ENABLED: ${API_GET_METHODS_ENABLED}
       TON_API_JSON_RPC_ENABLED: ${API_JSON_RPC_ENABLED}
       TON_API_ROOT_PATH: ${API_ROOT_PATH}
-    command: -c "gunicorn -k uvicorn.workers.UvicornWorker -w 1 --bind 0.0.0.0:8081 pyTON.main:app"
+    command: -c "gunicorn -k uvicorn.workers.UvicornWorker -w 1 --bind 0.0.0.0:${API_PORT} pyTON.main:app"
     networks:
       ton-network:
         ipv4_address: 172.18.0.3
