--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@ API_VERSION=2.0.31
 API_NETWORK=testnet
 API_MODE=onetoone
 API_CONF_VOLUME=${PWD}/config/api-config
+API_PORT=8081
 
 API_CACHE_ENABLED=0
 API_LOGS_JSONIFY=0
